<resources>
    <string name="app_name">Saveo Assignment</string>
    <string name="book">Book</string>
    <string name="overview">Overview</string>
    <string name="revenue">Revenue</string>
    <string name="credits">Credits</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="title_name">Title: %1$s</string>
    <string name="release_date">Release Date: %1$s</string>
    <string name="demo_overview">Andy Dufresne (Tim Robbins) is sentenced to two consecutive life terms in prison for the murders of his wife and her lover and is sentenced to a tough prison. However, only Andy knows he didn\'t commit the crimes. While there, he forms a friendship with Red (Morgan Freeman), experiences brutality of prison life, adapts, helps the warden, etc., all in 19 years.</string>
    <string name="review">Review</string>
    <string name="click_review"><u>Click to read full review</u></string>
    <string name="rating">Rating</string>
    <string name="search_movie">Search Movie</string>
    <string name="revenue_amount">%1$s $</string>
    <string name="no_results_found">No Results Found</string>
    <string name="now_showing">Now Showing</string>
</resources>